--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-md-4 col-sm-12 col-xs-12">
 
 	      <label>Snapshot - </label>
-        <div id="camera"></div>
+        <div id="result"></div>
         <br><br>
         <button onclick="check();" class="btn btn-success">Prediction Emotion</button>
         <br>
